stateDiagram-v2
    direction LR

    state "After evaluation" as eval {
        direction TB
        state "A3.1 - Exam Exempted" as A3_1
        state "A4.0 - Exam Taken" as A4_0
        state "A4.3 - Further Evaluation Required" as A4_3
    }

    state "Admission results" as results {
        direction TB
        state "A5.0 - Offered" as A5_0
        state "A5.1 - Offered - Probationary (IS/GS/SOL)" as A5_1
        state "A5.2 - Offered - Redirected" as A5_2
        state "A5.3 - Waitlisted" as A5_3
        state "A5.5 - Not Qualified [Terminal]" as A5_5
    }

    A3_1 --> A5_0: Scores within cutoff
    A3_1 --> A5_2: Redirected
    A3_1 --> A5_3: Waitlisted
    A3_1 --> A5_5: Outside cutoff
    A4_0 --> A5_0: Scores within cutoff
    A4_0 --> A5_1: Probationary offer
    A4_0 --> A5_2: Redirected
    A4_0 --> A5_3: Waitlisted
    A4_0 --> A5_5: Outside cutoff
    A4_3 --> A5_0: Passed further evaluation
    A4_3 --> A5_1: Probationary offer
    A4_3 --> A5_2: Redirected
    A4_3 --> A5_3: Waitlisted
    A4_3 --> A5_5: Outside cutoff
    A5_3 --> A5_0: Slot opened
    A5_5 --> [*]
